<resources>
    <string name="app_name">ADARO</string>
    <string name="main_title">ADARO</string>
    <string name="tClickTv">Tumor Sublocation</string>
    <string name="nClickTv">Invaded Lymph Nodes</string>
    <string name="addSwitch">Advanced Tumor</string>
    <string name="tumorLocation">Tumor Location</string>
    <string name="nodeLocation">Node Location</string>
    <string name="lRtumorLocation">Low Risk Tumor Location</string>
    <string name="lRnodeLocation">Low Risk Node Location</string>
    <string name="dialogTitle">Extension and Volumes to irradiate</string>
    <string name="additionnal">Additional notes</string>
    <string name="ctv56n">CTV56N_short</string>
    <string name="left">"Left:   "</string>
    <string name="right">Right: </string>
    <string name="invaded">Invaded</string>
    <string name="toIrradiate">TO IRRADIATE</string>
    <string name="newCase">New Case</string>
    <string name="load">Load</string>
    <string name="atlas">Contour Atlas</string>
    <string name="ipsilateral">Ipsilateral</string>
    <string name="contralateral">Contralateral</string>
    <string name="ia">Ia: Submental</string>
    <string name="ib">Ib: Sub Mandibular</string>
    <string name="ii">II: Upper Jugular</string>
    <string name="iii">III: Median Jugular</string>
    <string name="iva">IVa: Lower Jugular</string>
    <string name="ivb">IVb: Median Supraclavicular</string>
    <string name="vab">Posterior Triangle</string>
    <string name="vc">Vc: Lateral Supraclavicular</string>
    <string name="via">VIa : Anterior Jugular</string>
    <string name="vib">VIb: Pre-Laryngeal</string>
    <string name="viia">VIIa: Retro-Pharyngian</string>
    <string name="viib">VIIb: Retrostyloïd</string>
    <string name="viii">VIII: Parotidian</string>
    <string name="ix">IX: Bucco-Facial</string>
    <string name="xa">Xa: Retro &amp; Subauricular</string>
    <string name="xb">Xb: Occipital</string>
    <string name="amygdale">Palatine Tonsil</string>
    <string name="pilierposterieur">Pharyngopalatine Arch</string>
    <string name="pilieranterieur">Glossopalatine Arch</string>
    <string name="basedelangue">Base of Tongue</string>
    <string name="sillonamygdaloglosse">Tonsillolingual sulcus</string>
    <string name="espaceparapharynge">Parapharyngeal Space</string>
    <string name="foramenovale">Foramen Ovale</string>
    <string name="gangliondegasser">Trigeminal ganglia</string>
    <string name="pterygoidienmedial">Medial Pterygoid Muscle</string>
    <string name="branchemontante">Posterior Mandibular Arch</string>
    <string name="espacecarotidien">Carotid space</string>
    <string name="sinuscaverneux">Cavernous Sinus</string>
    <string name="espaceretropharynge">Retropharyngeal space</string>
    <string name="cavum">Nasopharynx</string>
    <string name="paroipharyngeeposterieure">Posterior Pharyngeal Wall</string>
    <string name="voile">Soft Palate</string>
    <string name="trigoneretromolairesuperieur">Upper Retromolar Triangle</string>
    <string name="carrefourdestroisreplis">Confluence of ary/ glosso/ pharyngo - epiglottic folds</string>
    <string name="racinedelangue">Root of Tongue</string>
    <string name="glandesousmaxillaire">Sub-Maxillary gland</string>
    <string name="gencive">Gingiva</string>
    <string name="mandibule">Mandible</string>
    <string name="joue">Cheek</string>
    <string name="trigoneretromolaireinferieur">Lower Retromolar Triangle</string>
    <string name="espacegraisseux">Bichat\'s fat pad</string>
    <string name="gencivesuperieure">Upper Gingiva</string>
    <string name="espaceparotidien">Parotid Space</string>
    <string name="fossepterygomaxillaire">Pterygomaxillary Fossa</string>
    <string name="plancherposterieur">Posterior Floor</string>
    <string name="langueposterieure">Posterior Tongue</string>
    <string name="replipharyngoepiglottique">Epiglotticopalatine Fold</string>
    <string name="facelingualedelepiglotte">Anterior surface of Epiglottis</string>
    <string name="espacepreepiglottique">Pre-epiglottic Space</string>
    <string name="palaisdur">Hard Palate</string>
    <string name="vallecule">Vallecula</string>
    <string name="languemobile">Mobile Tongue</string>
    <string name="plancherbuccal">Tongue Floor</string>
    <string name="faceinternedejoue">Inner Face of Cheek</string>
    <string name="genciveinferieure">Lower Gingiva</string>
    <string name="genciveposterieure">Posterior Gingiva</string>
    <string name="facedelepiglotte">Surface of Epiglottis</string>
    <string name="langue">Mobile Tongue</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="submental">Submental</string>
    <string name="submandibular">Submandibular</string>
    <string name="upperjugular">Upper Jugular</string>
    <string name="middlejugular">Middle Jugular</string>
    <string name="lowerjugular">Lower Jugular</string>
    <string name="medialsupraclavicular">Medial SupraClavicular</string>
    <string name="posteriortriangle">Posterior Triangle</string>
    <string name="lateralsupraclavicular">Lateral SupraClavicular</string>
    <string name="anteriorjugular">Anterior Jugular</string>
    <string name="prelaryngeal">PreLaryngeal, Pre- and Para-Tracheal</string>
    <string name="retropharyngeal">RetroPharyngeal</string>
    <string name="retrostyloid">Retro-Styloid</string>
    <string name="parotid">Parotid</string>
    <string name="buccofacial">Bucco-Facial</string>
    <string name="posteriorskull">Posterior Skull</string>
    <string name="invaded_location">Invaded Location</string>
    <string name="oropharynx">Oropharynx</string>
    <string name="cavitebuccale">Buccal Cavity</string>
    <string name="larynx">Larynx</string>
    <string name="left_alone">Left</string>
    <string name="right_alone">Right</string>
    <string name="decisionnal">Required Additional Information</string>
    <string name="selectLoc">Select Location</string>
    <string name="side">Side</string>
    <string name="loadedCase">Loaded Case</string>
    <string name="enterInfo">Enter a name and basic information about this case</string>
    <string name="adaro">ADARO</string>
    <string name="leduc">N. Leduc</string>
    <string name="dupin">C. Dupin</string>
    <string name="explanation">The ADARO software allows users to compute and visualize Low Risk Target Volume for the irradiation of Oropharynx, Larynx-Hypopharynx and Buccal Cavity cancers.</string>
    <string name="bibliography">Lapeyre and al., 2005, Cancer/Radiotherapie, Lapeyre and al., 2013, Cancer/Radiotherapie, Gregoire and al., 2014, Radiation Oncology</string>
    <string name="copyright">All rights reserved C. Dupin and N. Leduc</string>
    <string name="bibliography_static">Bibliography</string>
    <string name="copyright_static">Copyright</string>
    <string name="mandibuledeproximite">Proximal mandible</string>
    <string name="perschangestitle">Case by Case Sublocation Changes</string>
    <string name="aireganglionnaire">Lymph node area</string>
    <string name="x">X: Posterior Skull</string>
    <string name="sinussphenoidal">Sphenoid Sine</string>
    <string name="sinuspiriforme">Piriform sine</string>
    <string name="paroipharyngeelaterale">Lateral side of pharyngeal wall</string>
    <string name="none">None</string>
    <string name="brain">Brain</string>
    <string name="brainstem">Brain Stem</string>
    <string name="anteriorsegment">Anterior Segment</string>
    <string name="posteriorsegment">Posterior Segment</string>
    <string name="lacrimalgland">Lacrimal Gland</string>
    <string name="chiasm">Chiasm</string>
    <string name="opticnerve">Optic Nerve</string>
    <string name="pituitarygland">Pituitary Gland</string>
    <string name="carotid">Carotid Artery</string>
    <string name="cochlea">Cochlea</string>
    <string name="mandible">Mandible</string>
    <string name="extendedoralcavity">Extended Oral Cavity</string>
    <string name="submandibulargland">Submandibular gland</string>
    <string name="pharyngealconstrictormuscles">Pharyngeal Constrictor Muscles</string>
    <string name="cricopharyngealinlet">Crico Pharyngeal Inlet</string>
    <string name="cervicalesophagus">Cervical Esophagus</string>
    <string name="lips">Lips</string>
    <string name="buccalmucosa">Buccal Mucosa</string>
    <string name="glotticlarynx">Glottic Larynx</string>
    <string name="supraglotticlarynx">Supra Glottic Larynx</string>
    <string name="thyroid">Thyroid</string>
    <string name="spinalcord">Spinal Cord</string>
    <string name="brachialplexus">Brachial Plexus</string>
    <string name="arytenoid">Arytenoid</string>
    <string name="allSelectedSwitch">Select All</string>
    <string name="iia">IIa: Upper Jugular nodes (anterior)</string>
    <string name="iib">IIb: Upper Jugular Nodes (posterior)</string>
    <string name="fossepterygopalatine">Pterygomaxillary Fossa</string>
    <string name="plancherbuccalmed">Tongue Floor (median)</string>
    <string name="plancherbuccallat">Tongue Floor (lateral</string>
    <string name="gencivesuperieuremed">Upper Gum (Median)</string>
    <string name="gencivesuperieurelat">Upper Gum (Lateral)</string>
    <string name="faceinternedejouemed">Inner Face of Cheek (Median)</string>
    <string name="faceinternedejouelat">Inner Face of Cheek (Lateral)</string>
    <string name="genciveinferieuremed">Lower Gum (Median)</string>
    <string name="genciveinferieurelat">Lower Gum (Lateral)</string>
    <string name="palaisdurmed">Hard Palate (Median)</string>
    <string name="palaisdurlat">Hard Palate (Lateral)</string>
    <string name="amygdaleautre">Other</string>
    <string name="amygdalet13base">T1 -T3 with limited extension to Tongue Floor (inf 1/3)</string>
    <string name="amygdalet13vellaire">T1-T3 with limited extension to Veil (inf 1/3)</string>
    <string name="amygdalet13fosse">T1-T3 limited to the Tonsillar Fossa</string>
    <string name="amygdalet1sanspilier">T1 with extension to Pilars</string>
    <string name="voilet1">Soft Palate T1</string>
    <string name="voilet24">Soft Palate T2-4</string>
    <string name="larynxsusglottique">Supra Glottic Larynx</string>
    <string name="larynxsousglottique">Infra Glottic Larynx</string>
    <string name="larynxglottique">Glottic Larynx</string>
    <string name="cordevocale">Vocal Cord</string>
    <string name="notavailableforlarynx">Target Volume Delineation Not Availlable For Larynx - Hypopharynx</string>
    <string name="larynxhypopharynx">Larynx - Hypopharynx</string>
    <string name="larynxt12">Larynx T1-2</string>
    <string name="larynxt34">Larynx T3-4</string>
    <string name="ppphypop">Posterior Wall of Hypopharynx</string>
    <string name="sinuspi">Piriforme Sine</string>
    <string name="sphenoide">Sphenoid Sine</string>
    <string name="droite">Right</string>
    <string name="gauche">Left</string>
    <string name="cranial">Cranial Limit</string>
    <string name="caudal">Caudal Limit</string>
    <string name="anterior">Anterior Limit</string>
    <string name="posterior">Posterior Limit</string>
    <string name="lateral">Lateral Limit</string>
    <string name="medial">Medial Limit</string>
    <string name="comment">Comments</string>
    <string name="rectumt">Select Tumour T stage</string>
    <string name="switchpsabdoln">Presacral Nodes in Abdominal Position</string>
    <string name="switcht4anteriorpelvic">Anterior Pelvic Organ Invasion</string>
    <string name="switcht4analsphincter">Anal Sphincter Invasion</string>
    <string name="switcht3extramsnode">Extra Mesorectal Node</string>
    <string name="switchirf">Infiltration of Ischiorectal fossa or External Anal Sphincter</string>
    <string name="switchvagina">Infiltration of Inferior Third of Vagina</string>
    <string name="switchn2">Numerous Mesorectum Nodes (N2)</string>
</resources>